# advent-of-code

./: .gitignore
2018/day01/: Cargo.toml  c.c  rust.rs
2018/day01/src/: main.rs
2018/day03/: Cargo.toml
2018/day04/: Cargo.toml
2018/day04/src/: main.rs
2018/day05/: Cargo.toml
2018/day06/src/: main.rs
2018/day07/: Cargo.toml
2018/day07/src/: main.rs
2018/day09/: Cargo.toml
2018/day09/src/: main.rs
2018/day10/: Cargo.toml
2018/day10/src/: main.rs
2018/day11/src/: main.rs
2019/day1/: Cargo.toml
2019/day1/src/: one.rs  two.rs
2019/day2/: Cargo.toml
2019/day2/src/: one.rs  two.rs
2019/day3/: Cargo.toml
2019/day3/src/: one.rs  two.rs
2019/day4/: Cargo.toml
2019/day4/src/: one.rs  two.rs
2019/day5/: Cargo.toml
2019/day5/src/: one.rs  two.rs
2019/day6/: Cargo.toml
2019/day6/src/: one.rs  two.rs
2019/day7/: Cargo.toml
2019/day7/src/: one.rs  two.rs
2019/day8/: Cargo.toml
2019/day8/src/: one.rs  two.rs
2019/day9/: Cargo.toml
2019/day9/src/: one.rs
2020/day01/: main.scala
2020/day02/: Cargo.toml
2020/day03/: Cargo.toml  main.go  test.go
2020/day04/: .gitignore  main.kt  makefile
2021/: README.md  template.sh
2021/day01/: day01.ml
2021/day02/: day02.ml
2021/day03/: day03.ml
2021/day04/: day04.ml
day01/src/: main.rs
day02/src/: main.rs
day04/: trash.rs
day05/src/: main.rs
day06/: Cargo.toml
day06/src/: main.rs
day07/src/: main.rs
day08/: Cargo.toml  input
day08/src/: main.rs
day1/src/: main.rs
day11/: Cargo.toml
day2/: Cargo.toml
day2/src/: main.rs
day3/src/: main.rs
(+1 files in other folders)
